@@ -1,5 +1,12 @@
 2008-12-16  Yevgen Muntyan  <muntyan@tamu.edu>
 
+	* gtksourceview/gtksourcestyle.c (gtk_source_style_class_init),
+	(gtk_source_style_set_property): disabled setting xxx-set properties,
+	because that can't work while the properties are of CONSTRUCT type.
+	See bug #564425.
+
+2008-12-16  Yevgen Muntyan  <muntyan@tamu.edu>
+
 	* gtksourceview/gtksourceview.c
 	(gtk_source_view_get_mark_category_pixbuf): do not call
 	g_object_ref() on a NULL. Bug #564714, patch by Mike Spivey.
